--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,15 @@
 * {
-    font-family: 'Roboto Condensed', 'Rubik Bubbles', sans-serif;
+    font-family: "Inter", sans-serif;
+    border-radius: 12px;
     line-height: 1.5;
     font-weight: 400;
-    --primary-color: #2c2c2e;
-    --secondary-color: #3a3a3c;
-    --accent-color: #4a90e2;
-    --text-color: #e5e5ea;
-    --muted-color: #636366;
-    --success-color: #34c759;
-    --warning-color: #ff3b30;
-}
-body {
-    color : var(--text-color);
-    background-color: var(--primary-color);
+    --color-bg: #f9f9f9;
+    --color-card-bg: #ffffff;
+    --color-primary-text: #1c1c1e;
+    --color-secondary-text-label: #6e6e73;
+    --color-border-divider: #e5e5ea;
+    --color-btn: #3b82f6;
+    --color-item-highlight: #2563eb;
+    --color-icons: #1c1c1ce;
+    --color-notification: #a1a1aa
 }
