--- a/src/pages/Landing-page/LandingPage.module.css
+++ b/src/pages/Landing-page/LandingPage.module.css
@@ -1,4 +1,4 @@
-.dashboard {
+body {
   background-color: var(--color-bg);
   color: var(--color-primary-text);
 }
@@ -15,5 +15,18 @@
   font-size: 1.5rem;
   cursor: pointer;
   position: relative;
-  bottom: 5px;
+  bottom: 3px;
+}
+.calendarLink {
+  color: var(--color-item-highlight);
+  text-decoration: none;
+}
+.checklistIcon {
+  color: var(--color-icons);
+  font-size: 1.5rem;
+  position: relative;
+  bottom: 3px;
+}
+.button {
+  color: var(--color-item-highlight);
 }
